# programmableDPF

./: CMakeLists.txt  CompositeFSS.md  Formalization&protrocol.md  README.md  composite.md  high.md  highlevel.md  main.cpp  pdpf.md  softmax.md  suf.md  suf2.md  update.md
composite_fss/bench/: bench_composite_fss.cpp  bench_fss.cpp
composite_fss/include/composite_fss/: arith.hpp  beaver.hpp  composite_gate.hpp  global_helper.hpp  metrics.hpp  pdpf.hpp  pdpf_adapter.hpp  pdpf_full.hpp  pdpf_full_impl.hpp  pdpf_local.hpp  ring.hpp  sharing.hpp  suf.hpp  suf_batched.hpp  suf_eval.hpp  suf_packing.hpp  suf_to_lut.hpp  suf_unpack.hpp  wire.hpp
composite_fss/include/composite_fss/gates/: drelu.hpp  fused_layer.hpp  gelu.hpp  gez.hpp  inv.hpp  nexp.hpp  norm.hpp  recip.hpp  recsqrt.hpp  relu.hpp  softmax.hpp  softmax_block.hpp  trunc.hpp
composite_fss/src/gpu/: cuda_utils.cuh  pdpf_engine_cuda.cu  pdpf_engine_cuda.hpp
composite_fss/tests/: strict_harness.hpp  test_composite_fss.cpp  test_no_raw_open.cpp  test_strict_spdz.cpp  test_suf_packing.cpp
pdpf/include/pdpf/core/: group.hpp  types.hpp
pdpf/include/pdpf/ldc/: reed_muller_ldc.hpp
pdpf/include/pdpf/pdpf/: pdpf_amplified.hpp  pdpf_binary.hpp  pdpf_group.hpp  pdpf_lut.hpp
pdpf/include/pdpf/pprf/: pprf.hpp
pdpf/include/pdpf/prg/: prg.hpp
pdpf/src/core/: group.cpp  types.cpp
pdpf/src/ldc/: reed_muller_ldc.cpp
pdpf/src/pdpf/: pdpf_amplified.cpp  pdpf_binary.cpp  pdpf_group.cpp  pdpf_lut.cpp
pdpf/src/pprf/: pprf.cpp
pdpf/src/prg/: prg.cpp
pdpf/tests/: test_pdpf.cpp
